<resources>
    <string name="app_name"> ArtWork </string>
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="logo_here">LogoHere</string>
    <string name="name_of_the_art">Raphael And Athens School</string>
    <string name="artist_name">Raphael</string>
    <string name="description_text">Morbi et euismod augue. Etiam ut semper lorem. Donec viverra nisi at ligula bibendum mollis. Morbi blandit justo non nulla luctus sodales. Phasellus euismod quam et nisl malesuada pharetra quis interdum libero. Cras sed lacus a turpis lacinia euismod ac non tellus. Vivamus dui sapien, laoreet non urna nec, tempus porta felis. Pellentesque commodo ipsum sit amet blandit laoreet. Nunc lobortis pellentesque est id efficitur. Sed malesuada mi tortor, ut porta dolor maximus ut. In hac habitasse platea dictumst. Cras sodales sem neque, in commodo dui suscipit sed. Vivamus id lectus a orci consectetur volutpat vitae sit amet erat. Pellentesque volutpat ac lorem ac fringilla. Duis viverra eu neque vel facilisis. Vivamus justo nibh, rutrum et elit posuere, lacinia malesuada mi.Aenean faucibus ligula nisl, ut laoreet nisi vehicula vitae. Vestibulum ac est tristique, fringilla metus non, tempus augue. Nullam in nisl at ligula ultrices venenatis sed a dolor. Ut rhoncus bibendum dolor, et tempus urna volutpat eget. Donec pellentesque mollis nunc, et accumsan arcu ullamcorper at. Aenean risus eros, imperdiet at ligula nec, tincidunt semper augue. Pellentesque at lectus libero. Proin semper eu nulla eu mattis. Maecenas convallis tortor id scelerisque consequat. Etiam non dignissim justo. Etiam orci ex, pulvinar venenatis pharetra ac, scelerisque in quam.</string>
    <string name="share_button_text">SHARE</string>
    <string name="add_library_button_text">ADD LIBRARY</string>
    <string name="like_button">Like Button</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dislike_button">Dislike Button</string>
</resources>
